--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -19,8 +19,8 @@
 
 <body>
 
-    <h1> JavaScript Fundamentals for absolute Beginner</h1>
-    <h2> Final Project </h2>
+    <h1> Colors in the Wild</h1>
+    <h2>This colors are unique</h2>
 
     <div id="resultContainer">
 
